Fix UI search on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -929,6 +929,9 @@ video {
 .ml-4 {
 	margin-left: 1rem;
 }
+.mt-6 {
+	margin-top: 1.5rem;
+}
 .box-border {
 	box-sizing: border-box;
 }
